--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0"
   },
-
   "scripts": {
-  "start": "node server.js",
-  "dev": "nodemon server.js"
-}
-
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "type": "module"
 }
